[package]
name = "sbp-settings"
version = "0.6.10"
authors = ["Swift Navigation <dev@swift-nav.com>"]
edition = "2018"
description = "SwiftNav settings API library"
repository = "https://github.com/swift-nav/libsettings-rs"
license-file = "LICENSE"
readme = "README.md"
include = ["**/*.rs", "src/libsettings/settings.yaml"]

[dependencies]
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
log = "0.4"
once_cell = "1"
parking_lot = "0.12"
sbp = { version = "4", features = ["link"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"

[dev-dependencies]
mockstream = { git = "https://github.com/lazy-bitfield/rust-mockstream", rev = "0.0.4" }
